#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(server,1.0)
#AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([src/server.c],[src/delete_con.c])
AC_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(server,1.0)

# Checks for programs.
${CFLAGS="-O2"}
AC_PROG_CC

AC_ARG_ENABLE(epoll,[--enable-epoll	epoll support],,enable_epoll=no)
if test "$enable_epoll" = yes; then
	AC_DEFINE(LINUX)
fi

# Checks for libraries.
AC_CHECK_LIB([pthread],[sybdb],[z])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h pthread.h errno.h sys/un.h fcntl.h semaphore.h sybfront.h sybdb.h])
AC_PROG_LIBTOOL
# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([memset socket strchr strerror strstr])

AC_CONFIG_FILES([CONFIG/Makefile
                 DES/Makefile            
		 COMPRESS/Makefile
		 src/Makefile
		 Makefile])
AC_OUTPUT
